rename the file name

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <div class="video-title">Top Edit 2</div>
       </div>
       <div class="video-preview">
-        <video src="IMG_1984.MP4" controls poster="edit2.jpg"></video>
+        <video src="07.MP4" controls poster="edit2.jpg"></video>
         <div class="video-title">Top Edit 2</div>
       </div>
     </div>
@@ -520,7 +520,7 @@
     <h2>After Effects Tutorials</h2>
     <div class="video-gallery">
       <div class="video-preview">
-        <video src="IMG_2591.mp4" controls poster="tutorial1.jpg"></video>
+        <video src="06.mp4" controls poster="tutorial1.jpg"></video>
         <div class="video-title">Tutorial 1</div>
       </div>
       <div class="video-preview">
@@ -538,11 +538,11 @@
     <h2>My Projects</h2>
     <div class="video-gallery">
       <div class="video-preview">
-        <video src="IMG_1470.mp4" controls poster="project1.jpg"></video>
+        <video src="08.mp4" controls poster="project1.jpg"></video>
         <div class="video-title">Project 1</div>
       </div>
       <div class="video-preview">
-        <video src="IMG_1492.mp4" controls poster="project2.jpg"></video>
+        <video src="09.mp4" controls poster="project2.jpg"></video>
         <div class="video-title">Project 2</div>
 
        
