--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <div class="video-title">Top Edit 2</div>
       </div>
       <div class="video-preview">
-        <video src="07.MP4" controls poster="edit2.jpg"></video>
+        <video src="07.mp4" controls poster="edit2.jpg"></video>
         <div class="video-title">Top Edit 2</div>
       </div>
     </div>
